[package]
name = "microblog"
version = "0.1.0"
edition = "2024"

[dependencies]
firestore = "0.44.0"  # Ensure the version is correct
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
chrono = "0.4" #
uuid = { version = "1.11", features = ["v4"] }